[gd_scene load_steps=6 format=3 uid="uid://buh3412b0qtpp"]

[ext_resource type="PackedScene" uid="uid://biim2lxri0akl" path="res://example/field/field.tscn" id="1_fkhir"]
[ext_resource type="Script" path="res://example/Signal_bus.gd" id="1_swl7a"]
[ext_resource type="Script" path="res://example/drawcard.gd" id="3_aopf2"]
[ext_resource type="Script" path="res://example/end_turn.gd" id="4_d401k"]
[ext_resource type="PackedScene" uid="uid://b0u4pf74opd1e" path="res://audio_stream_player.tscn" id="5_akeb5"]

[node name="Game" type="Node"]

[node name="Signalbus" type="Node" parent="."]
script = ExtResource("1_swl7a")

[node name="CanvasLayer" type="CanvasLayer" parent="Signalbus" groups=["fields"]]

[node name="hand" parent="Signalbus/CanvasLayer" instance=ExtResource("1_fkhir")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -528.065
offset_top = -266.175
offset_right = -107.065
offset_bottom = -116.175
grow_horizontal = 2
grow_vertical = 0

[node name="Label" parent="Signalbus/CanvasLayer/hand" index="1"]
text = "hand"

[node name="Assets" parent="Signalbus/CanvasLayer" instance=ExtResource("1_fkhir")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -528.0
offset_top = -628.0
offset_right = -107.0
offset_bottom = -478.0
grow_horizontal = 2
grow_vertical = 0
isasset = true

[node name="destroy" parent="Signalbus/CanvasLayer" instance=ExtResource("1_fkhir")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -428.0
offset_right = 434.0
offset_bottom = -278.0
grow_horizontal = 2
grow_vertical = 0
isasset = true

[node name="Withdraw" parent="Signalbus/CanvasLayer" instance=ExtResource("1_fkhir")]
anchor_left = 0.5
anchor_top = 0.954
anchor_right = 0.5
anchor_bottom = 0.964
offset_left = -526.0
offset_top = -424.192
offset_right = -106.0
offset_bottom = -282.672
iswithdraw = true

[node name="DrawCards" type="Button" parent="Signalbus/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.597
anchor_top = 1.0
anchor_right = 0.601
anchor_bottom = 1.0
offset_left = -149.744
offset_top = -193.0
offset_right = -68.352
offset_bottom = -162.0
text = "Draw card"
script = ExtResource("3_aopf2")

[node name="end turn" type="Button" parent="Signalbus/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.583
anchor_top = 1.0
anchor_right = 0.583
anchor_bottom = 1.0
offset_left = -132.616
offset_top = -236.0
offset_right = -48.616
offset_bottom = -205.0
text = "End turn"
script = ExtResource("4_d401k")

[node name="Events" parent="Signalbus/CanvasLayer" instance=ExtResource("1_fkhir")]
offset_left = 589.0
offset_top = 21.0
offset_right = 589.0
offset_bottom = 21.0
isevent = true

[node name="ActionLabel" type="Label" parent="Signalbus/CanvasLayer"]
offset_left = 653.0
offset_top = 461.0
offset_right = 794.0
offset_bottom = 484.0
text = "Actions remaining: 2"

[node name="ResourcePanel" type="Panel" parent="Signalbus/CanvasLayer"]
visible = false
offset_left = 892.0
offset_top = 466.0
offset_right = 932.0
offset_bottom = 506.0

[node name="MoneyLabel" type="Label" parent="Signalbus/CanvasLayer"]
offset_left = 970.0
offset_top = 411.0
offset_right = 1060.0
offset_bottom = 434.0
text = "Money"

[node name="CO2Label" type="Label" parent="Signalbus/CanvasLayer"]
offset_left = 973.0
offset_top = 460.0
offset_right = 1063.0
offset_bottom = 483.0
text = "co2"

[node name="IronLabel" type="Label" parent="Signalbus/CanvasLayer"]
offset_left = 980.0
offset_top = 494.0
offset_right = 1070.0
offset_bottom = 517.0
text = "iron "

[node name="ReputationLabel" type="Label" parent="Signalbus/CanvasLayer"]
offset_left = 965.0
offset_top = 529.0
offset_right = 1055.0
offset_bottom = 552.0
text = "ReputationLabel"

[node name="TurnCounterLabel" type="Label" parent="Signalbus/CanvasLayer"]
offset_left = 1016.0
offset_top = 8.0
offset_right = 1144.0
offset_bottom = 31.0
text = "count :"

[node name="AudioStreamPlayer" parent="." instance=ExtResource("5_akeb5")]

[connection signal="transfercard" from="Signalbus/CanvasLayer/Assets" to="Signalbus" method="_on_assets_transfercard"]
[connection signal="transfercard" from="Signalbus/CanvasLayer/destroy" to="Signalbus" method="_on_assets_transfercard"]
[connection signal="pressed" from="Signalbus/CanvasLayer/DrawCards" to="Signalbus/CanvasLayer/hand" method="_on_button_pressed"]
[connection signal="pressed" from="Signalbus/CanvasLayer/end turn" to="Signalbus" method="_on_end_turn_pressed"]
[connection signal="pressed" from="Signalbus/CanvasLayer/end turn" to="Signalbus/CanvasLayer/end turn" method="_on_pressed"]
[connection signal="eventcard" from="Signalbus/CanvasLayer/Events" to="Signalbus" method="_on_events_eventcard"]

[editable path="Signalbus/CanvasLayer/hand"]
